2006-02-04  Hans Breuer  <hans@breuer.org>

	* lib/persitence.c(persistence_load) : dont leak filename
	in case of not existing file

	Code review via regex "[^_l>p](malloc|free|realloc)\("
	* objects/fs/function.c : what's g_strdup() must be g_free()'d
	* plug-ins/dxf/dxf-import.c : use g_realloc()/g_free()
	* plug-ins/xfig/xfig-import.c : use g_free() instead of plain free()

	* app/filedlg.c(file_save_as_response_callback) : before destroying 
	the save as dialog we need to drop the dialogs diagram reference.
	Fixes behaviour described in bug #123225#c7

	* app/interface.c(get_sheet_names) : need to sort sheets by their 
	display name to really fix bug #160101.
	
	* objects/UML/association.c : dont leak the role_name calculated
	with visibility attribute, use g_strdup_printf() instead of strcat().
	
	* configure.in : fix typo in error message

	* lib/object.c : remove duplicated prototype
	* lib/element.c : element_update_connections_rectangle() assumes nine
	connection points, i.e. requires 'mainpoint'. g_assert() for this.
	
2006-02-03  Hans Breuer  <hans@breuer.org>

	* objects/network/bus.c : allow to tint it. Patch from
	Torben H. Nielsen, closes bug #328580.
	* objects/network/wanlink.c : allow to tint this as well.
	
2006-01-29  Hans Breuer  <hans@breuer.org>

	* app/render_libart.c(draw_line) : make setting the pixel side-effect
	free; account for it in now (less) magic increments. Fixes bug #312147

2006-01-28  Hans Breuer  <hans@breuer.org>

	* po/checktrans.py : make it work with recent pyxml (unknown url type)
	* po/AADL.sheet.in : remove duplicated _description
	=> translation report works again

	* app/display.c : revert back to "_Discard Changes" to avoid
	accelerator clash. Also gtk_button_new_with_mnemonic() to
	'expand' the accelerator.

	* lib/dia_svg.c(dia_svg_style_init) : need to initialize
	linecap, linejoin, linestyle to avoid invalid settings.
	(Nguyen Thai Ngoc Duy, bug #328945)
	* lib/diagdkrenderer.c : add a place fro breakpoint to 