@@ -1,5 +1,8 @@
 2006-02-04  Hans Breuer  <hans@breuer.org>
 
+	* app/layer_widget.c : avoid writing to Layer::connectable for a
+	diagram possibly already gone. Fixes bug #329096.
+
 	* lib/persitence.c(persistence_load) : dont leak filename
 	in case of not existing file
 
